Response added to DOM

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="comp-Count">
                 <label for="compCount">How many comparisons would you like?</label>
-                <input type="number" name="compCount" class="js-compCount" value="10" required>
+                <input type="number" name="compCount" class="js-compCount" value="3" required>
             </div>
 
             <div class="sq-foot">
@@ -52,9 +52,11 @@
 
                 <input type="submit" value="search" class="rental-search-btn">
         </form>
-
-        <section id="rent-results" class="hidden"></section>
     </div>
+    <br>
+    <section class="results">
+        <div id="rent-results" class="hidden"></div>
+    </section>
 <!--
     <br>
 
