--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
     <br>
     <section class="results">
         <div id="rent-results" class="hidden"></div>
+        <div id="average-price" class="hidden"></div>
     </section>
-<!--
-    <br>
 
+    <br>
+<!--
     <div>
         <form class="cash-flow-form">
         <section class="calculator">
@@ -117,8 +118,8 @@
 
         </section>
         </form>
-    </div>
-    -->
+    </div>-->
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
