--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
 
     <br>
-<!--
+
     <div>
         <form class="cash-flow-form">
         <section class="calculator">
@@ -118,7 +118,7 @@
 
         </section>
         </form>
-    </div>-->
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
