--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <section>
             <h1>Rent Flow</h1>
-            <p>Brief description of the app and its purpose</p>
+            <p>This app is designed to provide users with comparable rent prices for their address of interest. Users can then use the Cash-Flow Estimator to determine the monthly cash flow for their property.</p>
         </section>
 
     <br>
@@ -21,8 +21,8 @@
             <h2>Get Rent Estimates and Comps</h2>
 
             <div class="search-criteria">
-                <label for="address">Please enter the property's address:</label>
-                <input type="text" name="address" class="js-address" required>
+                <label for="address">Please enter the property's address in the format seen in the text-box: </label>
+                <input type="text" name="address" class="js-address" value="1234 Fancy Street, Baker City, Alaska" required>
             </div>
 
             <div class="comp-Count">
@@ -66,50 +66,55 @@
         <section class="calculator">
             <h2>Cash Flow Estimator</h2>
             
-            <div>
+            <div class="monthly-rent">
                 <h3>Monthly Rent</h3>
                 <label for="monthly-rent">Enter monthly rent amount:</label>
-                <input type="number" name="rent" class="js-monthly-rent">
+                <input type="number" name="rent" class="js-monthly-rent" value="1200" required>
             </div>
 
-            <section class="expenses">
-                <div>
+            <section>
+                <div class="expenses">
                     <h3>Monthly Expenses</h3>
                     <label for="monthly-mortgage">Mortgage Payment:</label>
-                    <input type="number" name="mortgage" class="js-mortgage">
+                    <input type="number" name="mortgage" class="js-mortgage" value="600">
                 </div>
 
-                <div>
+                <div class="insurance">
                     <label for="monthly-insurance">Insurance</label>
-                    <input type="number" name="rent" class="js-monthly-rent">
+                    <input type="number" name="insurance" class="js-insurance" value="100">
                 </div>
 
-                <div>
+                <div class="taxes">
                     <label for="property-taxes">Property Taxes</label>
-                    <input type="number" name="taxes" class="js-monthly-taxes">
+                    <input type="number" name="taxes" class="js-taxes" value="120">
                 </div>
 
-                <div>
+                <div class="hoa">
                     <label for="monthly-hoa">HOA fees</label>
-                    <input type="number" name="hoa" class="js-monthly-hoa">
+                    <input type="number" name="hoa" class="js-hoa" value="0">
                 </div>
             </section>
 
             <section class="alt-costs">
-                <div>
+                <div class="vacancy">
                     <h3>Additional Costs</h3>
+                    <p>Enter as a decimal percentage</p>
                     <label for="vacancy-rate">Vacancy Rate:</label>
-                    <input type="text" name="vacancy" class="js-vacancy">
+                    <input type="text" name="vacancy" class="js-vacancy" value="0">
                 </div>
 
-                <div>
+                <div class="cap-ex">
                     <label for="capital-expenditure">Capital Expenditure:</label>
-                    <input type="number" name="cap-ex" class="js-cap-ex">
+                    <input type="text" name="cap-ex" class="js-cap-ex" value="0">
                 </div>
 
-                <div>
+                <div class="repairs">
                     <label for="repair-savings">Savings for repairs:</label>
-                    <input type="number" name="repairs" class="js-saving-repairs">
+                    <input type="text" name="repairs" class="js-savings-repairs" value="0">
+                </div>
+                <div class="property-management">
+                    <label for="prop-management">Property Management Fees:</label>
+                    <input type="text" name="property-management" class="js-property-management" value="0">
                 </div>
             </section>
 
