--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="content">
     <header>
         <div class="logo">
             <h1>Rent Flow</h1>
