--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="fade-in">ALL IN ONE PLACE</p>
             </div>
         </section>
-
+<!-- Rental Comp generator form -->
         <section class="compCriteria">
             <div class="inputCriteria">
                 <div class="description">
@@ -91,7 +91,7 @@
                 <div id="average-price" class="hidden"></div>
             </div>
         </section>
-
+<!-- Cashflow Calculator section -->
         <section class="cash-flow-calc">
             <div class="calcCriteria">
                 <form class="cash-flow-form">
