--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </header>
 
     <main>
-        <section class="intro">
+        <div class="intro">
             <div class="intro-description">
                 <p class="fade-in">RENTAL COMPS</p>
                 <p class="fade-in">CASH FLOW ESTIMATOR</p>
                 <p class="fade-in">ALL IN ONE PLACE</p>
             </div>
-        </section>
+        </div>
 <!-- Rental Comp generator form -->
         <section class="compCriteria">
             <div class="inputCriteria">
@@ -45,39 +45,39 @@
                 </div>
                 <form class="rent-form">
                     <h2 id="comps-gen">Comps Generator</h2>
-                    <p>Enter an address and corresponding details in the provided formats to find rental comps</p>
+                    <p>Enter an address and corresponding details in the provided formats to find rental comps. Make sure to use the exact format shown in the 'Address' example.</p>
 
                     <div class="input-fields">
                         <div class="baseAddress">
                             <label for="address">Address (use format: 1234 Address St., City, State): </label>
-                            <input type="text" name="address" class="js-address" value="" required>
+                            <input id="address" type="text" name="address" class="js-address" value="" required>
                         </div>
 
                         <div class="comp-Count">
                             <label for="compCount">Number of comps? (enter # up to 3)</label>
-                            <input type="number" name="compCount" class="js-compCount" value="3" required>
+                            <input id ="compCount" type="number" name="compCount" class="js-compCount" value="3" required>
                         </div>
 
                         <div class="sq-foot">
                             <label for="sq-foot">Square Footage:</label>
-                            <input type="number" name="sq-foot" class="js-square-foot" value="1500" required>
+                            <input id="sq-foot" type="number" name="sq-foot" class="js-square-foot" value="1500" required>
                         </div>
 
                         <div class="bedrooms">
                             <label for="bedrooms">Bedrooms:</label>
-                            <input type="number" name="bedrooms" class="js-bedrooms" value="3" required>
+                            <input id="bedrooms" type="number" name="bedrooms" class="js-bedrooms" value="3" required>
                         </div>
 
                         <div class="bathrooms">
-                            <label for="sq-foot">Bathrooms:</label>
-                            <input type="number" name="bathrooms" class="js-bathrooms" value="2" required>
+                            <label for="bathrooms">Bathrooms:</label>
+                            <input id="bathrooms" type="number" name="bathrooms" class="js-bathrooms" value="2" required>
                         </div>
 
                         <div class="propertyType">
                             <label for="propertyType">Property Type (Must be one of the following: Apartment, Single
                                 Family, Townhouse,
                                 Condo, Duplex-Triplex):</label>
-                            <input type="text" name="propertyType" class="js-propertyType" required>
+                            <input id="propertyType" type="text" name="propertyType" class="js-propertyType" required>
                         </div>
                     </div>
                     <div class="comp-btn">
@@ -102,49 +102,49 @@
                         <div class="monthly-rent">
                             <h3>Monthly Rent</h3>
                             <label for="monthly-rent">Enter monthly rent amount:</label>
-                            <input type="number" name="rent" class="js-monthly-rent" value="1200" required>
+                            <input id="monthly-rent" type="number" name="rent" class="js-monthly-rent" value="1200" required>
                         </div>
 
                         <div class="expenses">
                             <h3>Monthly Expenses</h3>
                             <label for="monthly-mortgage">Mortgage Payment:</label>
-                            <input type="number" name="mortgage" class="js-mortgage" value="600">
+                            <input id="monthly-mortgage" type="number" name="mortgage" class="js-mortgage" value="600">
                         </div>
 
                         <div class="insurance">
                             <label for="monthly-insurance">Insurance:</label>
-                            <input type="number" name="insurance" class="js-insurance" value="100">
+                            <input id="monthly-insurance" type="number" name="insurance" class="js-insurance" value="100">
                         </div>
 
                         <div class="taxes">
                             <label for="property-taxes">Property Taxes:</label>
-                            <input type="number" name="taxes" class="js-taxes" value="120">
+                            <input id="property-taxes" type="number" name="taxes" class="js-taxes" value="120">
                         </div>
 
                         <div class="hoa">
                             <label for="monthly-hoa">HOA fees:</label>
-                            <input type="number" name="hoa" class="js-hoa" value="0">
+                            <input id="monthly-hoa" type="number" name="hoa" class="js-hoa" value="0">
                         </div>
 
                         <div class="vacancy">
                             <h3>Additional Costs</h3>
                             <p>Enter as a decimal (ex: 8% = 0.08)</p>
                             <label for="vacancy-rate">Vacancy Rate:</label>
-                            <input type="text" name="vacancy" class="js-vacancy" value="0">
+                            <input id="vacancy-rate" type="text" name="vacancy" class="js-vacancy" value="0">
                         </div>
 
                         <div class="cap-ex">
                             <label for="capital-expenditure">Capital Expenditure:</label>
-                            <input type="text" name="cap-ex" class="js-cap-ex" value="0">
+                            <input id="capital-expenditure" type="text" name="cap-ex" class="js-cap-ex" value="0">
                         </div>
 
                         <div class="repairs">
                             <label for="repair-savings">Savings for repairs:</label>
-                            <input type="text" name="repairs" class="js-savings-repairs" value="0">
+                            <input id="repair-savings" type="text" name="repairs" class="js-savings-repairs" value="0">
                         </div>
                         <div class="property-management">
                             <label for="prop-management">Property Management Fees:</label>
-                            <input type="text" name="property-management" class="js-property-management" value="0">
+                            <input id="prop-management" type="text" name="property-management" class="js-property-management" value="0">
                         </div>
                     </div>
                     <input type="submit" value="Calculate" class="cash-flow-btn">
